.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:22:38 **** Clean-only build of configuration Debug for project reconstruct ****
make clean 
rm -rf  ./recon.o  ./recon.d  reconstruct
 
15:22:41 **** Build of configuration Debug for project reconstruct ****
make all 
Building file: ../recon.cpp
Invoking: Cross G++ Compiler
g++ -I/home/diego/softwares/opencv-3.3/build-all-modules/include -I/home/diego/softwares/eigen3.3 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"recon.d" -MT"recon.o" -o "recon.o" "../recon.cpp"
../recon.cpp: In function ‘int main(int, char**)’:
../recon.cpp:67:81: error: ‘reconstruct’ was not declared in this scope
   reconstruct(images_paths, Rs_est, ts_est, K, points3d_estimated, is_projective);
                                                                                 ^
../recon.cpp:85:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i = 0; i < points3d_estimated.size(); ++i)
                     ^
make: *** [recon.o] Error 1
subdir.mk:18: recipe for target 'recon.o' failed
15:26:27 **** Incremental Build of configuration Debug for project reconstruct ****
make all 
Building file: ../recon.cpp
Invoking: Cross G++ Compiler
g++ -I/home/diego/softwares/opencv-3.3/build-all-modules/include -I/home/diego/softwares/eigen3.3 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"recon.d" -MT"recon.o" -o "recon.o" "../recon.cpp"
../recon.cpp: In function ‘int main(int, char**)’:
../recon.cpp:69:81: error: ‘reconstruct’ was not declared in this scope
   reconstruct(images_paths, Rs_est, ts_est, K, points3d_estimated, is_projective);
                                                                                 ^
../recon.cpp:87:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i = 0; i < points3d_estimated.size(); ++i)
                     ^
subdir.mk:18: recipe for target 'recon.o' failed
make: *** [recon.o] Error 1
15:27:39 **** Incremental Build of configuration Debug for project reconstruct ****
make all 
Building file: ../recon.cpp
Invoking: Cross G++ Compiler
g++ -I/home/diego/softwares/opencv-3.3/build-all-modules/include -I/home/diego/softwares/eigen3.3 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"recon.d" -MT"recon.o" -o "recon.o" "../recon.cpp"
../recon.cpp: In function ‘int main(int, char**)’:
../recon.cpp:87:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i = 0; i < points3d_estimated.size(); ++i)
                     ^
Finished building: ../recon.cpp
 
Building target: reconstruct
Invoking: Cross G++ Linker
g++ -L/home/diego/softwares/opencv-3.3/build-all-modules/lib -o "reconstruct"  ./recon.o   -lopencv_core -lopencv_sfm -lopencv_imgproc -lopencv_highgui -lopencv_imgcodecs -lopencv_videoio -lopencv_xfeatures2d -lopencv_features2d
./recon.o: In function `main':
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:79: undefined reference to `cv::viz::Viz3d::Viz3d(cv::String const&)'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:80: undefined reference to `cv::viz::Viz3d::setWindowSize(cv::Size_<int> const&)'
makefile:44: recipe for target 'reconstruct' failed
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:81: undefined reference to `cv::viz::Viz3d::setWindowPosition(cv::Point_<int> const&)'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:82: undefined reference to `cv::viz::Viz3d::setBackgroundColor(cv::viz::Color const&, cv::viz::Color const&)'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:98: undefined reference to `cv::viz::WCloud::WCloud(cv::_InputArray const&, cv::viz::Color const&)'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:99: undefined reference to `cv::viz::Viz3d::showWidget(cv::String const&, cv::viz::Widget const&, cv::Affine3<double> const&)'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:109: undefined reference to `cv::viz::WTrajectory::WTrajectory(cv::_InputArray const&, int, double, cv::viz::Color const&)'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:109: undefined reference to `cv::viz::Viz3d::showWidget(cv::String const&, cv::viz::Widget const&, cv::Affine3<double> const&)'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:110: undefined reference to `cv::viz::WTrajectoryFrustums::WTrajectoryFrustums(cv::_InputArray const&, cv::Matx<double, 3, 3> const&, double, cv::viz::Color const&)'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:110: undefined reference to `cv::viz::Viz3d::showWidget(cv::String const&, cv::viz::Widget const&, cv::Affine3<double> const&)'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:111: undefined reference to `cv::viz::Viz3d::setViewerPose(cv::Affine3<double> const&)'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:119: undefined reference to `cv::viz::Viz3d::spin()'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:79: undefined reference to `cv::viz::Viz3d::~Viz3d()'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:69: undefined reference to `cv::viz::Viz3d::~Viz3d()'
/home/diego/eclipse-workspace/3D/reconstruct/Debug/../recon.cpp:79: undefined reference to `cv::viz::Viz3d::~Viz3d()'
./recon.o: In function `cv::viz::Widget3D::~Widget3D()':
/home/diego/softwares/opencv-3.3/build-all-modules/include/opencv2/viz/widgets.hpp:181: undefined reference to `cv::viz::Widget::~Widget()'
collect2: error: ld returned 1 exit status
make: *** [reconstruct] Error 1
15:29:14 **** Incremental Build of configuration Debug for project reconstruct ****
make all 
Building target: reconstruct
Invoking: Cross G++ Linker
g++ -L/home/diego/softwares/opencv-3.3/build-all-modules/lib -o "reconstruct"  ./recon.o   -lopencv_core -lopencv_viz -lopencv_sfm -lopencv_imgproc -lopencv_highgui -lopencv_imgcodecs -lopencv_videoio -lopencv_xfeatures2d -lopencv_features2d
Finished building target: reconstruct
 
15:29:19 **** Incremental Build of configuration Debug for project reconstruct ****
make all 
make: Nothing to be done for 'all'.
16:17:13 **** Incremental Build of configuration Debug for project reconstruct ****
make all 
Building target: reconstruct
Invoking: Cross G++ Linker
g++ -L/home/diego/softwares/opencv-3.3/build-all-modules/lib -o "reconstruct"  ./recon.o   -lopencv_core -lopencv_viz -lopencv_sfm -lopencv_imgproc -lopencv_highgui -lopencv_imgcodecs -lopencv_videoio -lopencv_xfeatures2d -lopencv_features2d
Finished building target: reconstruct
 
